<resources>
    <string name="app_name">Cooker</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>
    <string name="user_name">Name</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_up">Sign Up</string>
    <string name="error_invalid_name">This user name is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="checkbox">Remember password</string>
    <string name="toast_register_success">Register success and you can login now!</string>
    <string name="title_activity_register">Register</string>
    <string name="prompt_password_repeat">Password repeat</string>
    <string name="action_sign_up_ok">Finish</string>
    <string name="error_password_different">Passwords are different</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="other">Other</string>
    <string name="home">Home</string>
    <string name="book">Book</string>
    <string name="about">About</string>
    <string name="feedback">Feedback</string>
    <string name="settings">Settings</string>
    <string name="exit">Exit</string>
    <string name="title_activity_book">Book</string>
    <string name="title_activity_cooker_add">CookerAddActivity</string>
    <string name="title_activity_book_add">BookAddActivity</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="title_dialog_cooker">CREATE A COOKER</string>
    <string name="dialog_cooker_name">Cooker name</string>
    <string name="dialog_cooker_location">Cooker location</string>
    <string name="title_book_activity_progress">FETCHING DATA</string>
    <string name="message_book_activity_dialog">This may be take a while, please wait a few seconds…</string>
    <string name="snackbar_text_book_history">Are you sure to delete it ?</string>
    <string name="snackbar_text_book_now">Are you sure to cancel this book ?</string>
    <string name="toast_book_activity_local_no_data">No data in local, fetch from server please!</string>
    <string name="title_book_add_activity_progress">PUSH TO SERVER</string>
    <string name="message_book_add_activity_dialog">This may take a while, please wait a few senconds…</string>
    <string name="snackbar_text_cooker_fragment">Are you sure to delete this cooker?</string>
    <string name="title_cooker_fragment_progress">PUSH DATA TO SERVER</string>
    <string name="message_cooker_fragment_dialog">This may take a while, please wait a few seconds…</string>
    <string name="menu_cooker_fragment_refresh">REFRESH</string>
    <string name="title_book_fragment_progress">FETCH DATA FROM SERVER</string>
    <string name="message_book_fragment_dialog">This may take a while, please wait a few seconds…</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="dialog_book_empty_text">You have no cooker to choose.</string>
    <string name="book_card_item_book_id">BookId</string>
    <string name="book_card_item_cooker_id">CookerId</string>
    <string name="book_card_item_cooker_name">CookerName</string>
    <string name="book_card_item_time">Time</string>
    <string name="book_card_item_rice_weight">Weight</string>
    <string name="book_card_item_people_count">People</string>
    <string name="book_card_item_cooker_location">Location</string>
    <string name="book_card_item_cooker_status">Status</string>
    <string name="book_card_item_book_taste">Taste</string>
    <string name="remote_title">Cooker</string>
    <string name="remote_describe">No Activity</string>
    <string name="remote_detail">DETAIL</string>
    <string name="remote_remove">REMOVE</string>
    <string name="title_status_activity">Status</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="status_button_home">Home</string>
    <string name="status_button_exit">EXIT</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_general">General</string>
    <string name="pref_general_use_custom_theme_title">Enable custom theme</string>
    <string name="pref_general_use_custom_theme_summary">Choose the most beautiful color theme you like most.</string>
    <string name="pref_header_data_sync">Data sync</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_notifications_title">New message notifications</string>
    <string name="pref_notifications_summary">Application will notify you when a message comes using Ringtone or Vibrate.</string>
    <string name="pref_notifications_title_ringtone">Ringtone</string>
    <string name="pref_notifications_title_vibrate">Vibrate</string>
    <string name="key_pref_notification_notification_new_message">notification_new_message</string>
    <string name="key_pref_notification_notification_new_message_ringtone">notification_new_message_ringtone</string>
    <string name="key_pref_notification_notification_new_message_vibrate">notification_new_message_vibrate</string>
    <string name="pref_header_account">Account</string>
    <string name="pref_header_update">Update</string>
    <string name="your_input">Input feedback</string>
    <string name="select_image">+ Add Screenshot  </string>
    <string name="feedback_attach_system_information">Attach System Information</string>
    <string name="feedback_checkbox_tip">This will only collect your OS and hardware information. No privacy will be reported.</string>
    <string name="feedback_image_view_describe">image view</string>
    <string name="search">Search</string>
    <string name="holder">Holder</string>
</resources>