<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="true"
        android:key="@string/key_pref_notification_notification_new_message"
        android:summary="@string/pref_notifications_summary"
        android:title="@string/pref_notifications_title" />

    <RingtonePreference
        android:defaultValue="content://settings/system/notification_sound"
        android:dependency="@string/key_pref_notification_notification_new_message"
        android:key="@string/key_pref_notification_notification_new_message_ringtone"
        android:ringtoneType="notification"
        android:title="@string/pref_notifications_title_ringtone" />

    <SwitchPreference
        android:defaultValue="true"
        android:dependency="@string/key_pref_notification_notification_new_message"
        android:key="@string/key_pref_notification_notification_new_message_vibrate"
        android:title="@string/pref_notifications_title_vibrate" />

</PreferenceScreen>
