<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="150dp">

    <ImageView
        android:id="@+id/remote_graph"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_margin="8dp"
        android:background="@color/blue_grey_600" />

    <TextView
        android:id="@+id/remote_title"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_toEndOf="@id/remote_graph"
        android:ellipsize="end"
        android:gravity="start|center_vertical"
        android:lines="1"
        android:maxLines="1"
        android:text="@string/remote_title"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        android:textColor="?android:attr/textColorPrimary" />

    <TextView
        android:id="@+id/remote_describe"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/remote_title"
        android:layout_toEndOf="@id/remote_graph"
        android:ellipsize="end"
        android:gravity="start"
        android:lines="2"
        android:maxLines="2"
        android:text="@string/remote_describe"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:textColor="?android:attr/textColorPrimary" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/remote_describe"
        android:layout_toEndOf="@id/remote_graph"
        android:orientation="horizontal">

        <Button
            android:id="@+id/remote_detail"
            style="?android:attr/buttonBarPositiveButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/remote_detail"
            android:textColor="@color/colorAccent" />

        <Button
            android:id="@+id/remote_remove"
            style="?android:attr/buttonBarNegativeButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/remote_remove"
            android:textColor="@color/colorAccent" />
    </LinearLayout>
</RelativeLayout>