<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="me.stupidme.cooker.view.feedback.FeedbackActivity">

    <include layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <EditText
                android:id="@+id/feedback_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_feedback"
                android:layout_marginRight="@dimen/margin_feedback"
                android:layout_marginTop="@dimen/margin_feedback"
                android:hint="@string/your_input" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_feedback"
                android:layout_marginRight="@dimen/margin_feedback"
                android:layout_marginTop="@dimen/margin_feedback"
                android:clickable="true">

                <ImageView
                    android:id="@+id/feedback_image_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/feedback_image_view_describe"
                    android:scaleType="centerCrop" />

                <TextView
                    android:id="@+id/feedback_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_gravity="center"
                    android:background="@color/colorPrimary"
                    android:drawableTop="@drawable/ic_image_black_48dp"
                    android:gravity="center"
                    android:padding="64dp"
                    android:text="@string/select_image"
                    android:textSize="20sp" />

            </FrameLayout>

            <CheckBox
                android:id="@+id/feedback_checkbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_feedback"
                android:layout_marginRight="@dimen/margin_feedback"
                android:layout_marginTop="@dimen/margin_feedback"
                android:checked="true"
                android:text="@string/feedback_attach_system_information" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_feedback"
                android:layout_marginLeft="@dimen/margin_feedback"
                android:layout_marginRight="@dimen/margin_feedback"
                android:paddingEnd="0dp"
                android:paddingStart="32dp"
                android:text="@string/feedback_checkbox_tip" />

        </LinearLayout>
    </ScrollView>

</android.support.design.widget.CoordinatorLayout>
